# my-adk-study

./: .gitignore  AGENTS.md  README.md
.opencode/agents/: README.md  analyst.md  architect.md  code-reviewer.md  code-simplifier.md  critic.md  debugger.md  designer.md  document-specialist.md  executor.md  explore.md  git-master.md  planner.md  qa-tester.md  scientist.md  security-reviewer.md  test-engineer.md  tracer.md  verifier.md  writer.md
topic/agent-cli/caveman-agent/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
topic/agent-cli/caveman-agent/app/: agent.py  fast_api_app.py
topic/agent-starter-pack/: GEMINI.md  Makefile  README.md  pyproject.toml
topic/agent-starter-pack/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
topic/agent-starter-pack/app/: fast_api_app.py
topic/agent-starter-pack/app/app_utils/: telemetry.py  typing.py
topic/agent-starter-pack/deployment/terraform/: build_triggers.tf  service.tf  storage.tf  variables.tf
topic/callback/: README.md  test_func_tool.py  test_script.py  test_script2.py  test_tool_context.py  test_tool_context2.py
topic/callback/agent/: agent.py
topic/mcp-toolbox/: Makefile  README.md  pyproject.toml  session.db  takeaway.md
topic/mcp-toolbox/agent/: agent.py
topic/mcp-toolbox/db/: create_users_table.sql  toolbox.db
topic/mcp-toolbox/docs/schema/: users.md
topic/mcp-toolbox/mcp/: postgres-tools.yaml  sqlite-tools.yaml
topic/session/: .env.example  Makefile  README.md  main.py  session.db  session_factory.py
topic/session/agent/: agent.py  test_user_info_tools.py
(+19 files in other folders)
