[project]
name = "mcp-toolbox-demo"
version = "0.1.0"
description = "Google ADK + MCP Toolbox demo project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-adk[toolbox]>=1.21.0",
  "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.13",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
